@@ -448,17 +448,19 @@ class Language:
 ########################################
 
 languages = {
-    "en"    : Language("us",        "iso01.16", "8859-1", "en_US.UTF-8"),
-    "pl"    : Language("pl",        "iso02.16", "8859-2", "pl_PL.UTF-8"),
-    "nl"    : Language("nl",        "iso01.16", "8859-1", "nl_NL.UTF-8"),
-    "de"    : Language("de",        "iso01.16", "8859-1", "de_DE.UTF-8"),
-    "es"    : Language("es",        "iso01.16", "8859-1", "es_ES.UTF-8"),
-    "it"    : Language("it",        "iso01.16", "8859-1", "it_IT.UTF-8"),
-    "fr"    : Language("fr",        "iso01.16", "8859-1", "fr_FR.UTF-8"),
-    "ca"    : Language("es",        "iso01.16", "8859-1", "ca_ES.UTF-8"),
-    "tr"    : Language("trq",       "lat5u-16", "8859-9", "tr_TR.UTF-8"),
-    "pt_BR" : Language("br-abnt2",  "iso01.16", "8859-1", "pt_BR.UTF-8"),
-    "sv"    : Language("sv-latin1", "lat0-16",  "8859-1", "sv_SE.UTF-8"),
+    "ca"    : Language("es",         "iso01.16",   "8859-1", "ca_ES.UTF-8"),
+    "de"    : Language("de",         "iso01.16",   "8859-1", "de_DE.UTF-8"),
+    "en"    : Language("us",         "iso01.16",   "8859-1", "en_US.UTF-8"),
+    "es"    : Language("es",         "iso01.16",   "8859-1", "es_ES.UTF-8"),
+    "fr"    : Language("fr",         "iso01.16",   "8859-1", "fr_FR.UTF-8"),
+    "hu"    : Language("hu",         "lat2a-16",   "8859-2", "hu_HU.UTF-8"),
+    "it"    : Language("it",         "iso01.16",   "8859-1", "it_IT.UTF-8"),
+    "nl"    : Language("nl",         "iso01.16",   "8859-1", "nl_NL.UTF-8"),
+    "pl"    : Language("pl",         "iso02.16",   "8859-2", "pl_PL.UTF-8"),
+    "pt_BR" : Language("br-abnt2",   "iso01.16",   "8859-1", "pt_BR.UTF-8"),
+    "ru"    : Language("ru",         "Cyr_a8x16",  "8859-5", "ru_RU.UTF-8"),
+    "sv"    : Language("sv-latin1",  "lat0-16",    "8859-1", "sv_SE.UTF-8"),
+    "tr"    : Language("trq",        "lat5u-16",   "8859-9", "tr_TR.UTF-8"),
 }
 
 def set_console_parameters():
