@@ -1,3 +1,6 @@
+2010-12-30  Onur Küçük <onur@pardus.org.tr>
+	* bin/mudur.py: Add HU and RU locales.
+
 2010-06-23  Ozan Çağlayan <ozan@pardus.org.tr>
 	* bin/setup.py: Bump 3.1.6
 
